@@ -5,9 +5,8 @@ dependencies[] = libraries
 dependencies[] = jquery_update(>2.2)
 configure = admin/config/media/photoswipe
 
-; Information added by Drupal.org packaging script on 2016-01-17
-version = "7.x-2.0-beta3"
+; Information added by Drupal.org packaging script on 2019-04-10
+version = "7.x-2.0-beta5"
 core = "7.x"
 project = "photoswipe"
-datestamp = "1453073644"
-
+datestamp = "1554916689"
