@@ -37,6 +37,10 @@ function theme_photoswipe_image_formatter($variables) {
     'style_name' => $settings['photoswipe_node_style'],
   );
 
+  if ($variables['delta'] == 0 && !empty($settings['photoswipe_node_style_first'])) {
+    $image['style_name'] = $settings['photoswipe_node_style_first'];
+  }
+
   $dimensions = array();
   if (isset($item['width']) && isset($item['height'])) {
     $image['width'] = $dimensions['width'] = $item['width'];
@@ -95,7 +99,12 @@ function theme_photoswipe_image_formatter($variables) {
 function theme_photoswipe_imagefield($variables) {
   $class = array('photoswipe');
   if (!empty($variables['image']['style_name'])) {
-    $image = theme('image_style', $variables['image']);
+    if ($variables['image']['style_name'] == 'hide') {
+      $image = '<!-- hidden image -->';
+    }
+    else {
+      $image = theme('image_style', $variables['image']);
+    }
   }
   else {
     $image = theme('image', $variables['image']);
